deadlock wait and notify, print Numbers, blocking queue configurable